--- a/databinding/build.gradle
+++ b/databinding/build.gradle
@@ -25,11 +25,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-   externalNativeBuild {
-        cmake {
-            path "CMakeLists.txt"
-        }
+
+
+    dataBinding {
+        enabled = true
     }
+
+
 }
 
 dependencies {
